# nmsg-dnstap

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  nmsg-dnstap.spec
debian/: changelog  control  copyright  gbp.conf
man/: nmsg-dnstap.1  nmsg_dnstap.1
src/: fstrm_srv.c  fstrm_srv.h  nmsg-dnstap.c
tests/: dnstap-input-data  nmsgtool.dnstap.json  nmsgtool.dnstap.pres  test-tcp-to-nmsg-zeromq-json.sh  test-unix-domain-to-nmsg-udp-sock-pres.sh
